--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "A budgetting app made with Node.js",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Edmil Di Massimo",
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "app-root-path": "^3.0.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
-    "winston": "^3.2.1"
+    "jsonwebtoken": "^8.5.1",
+    "prisma-client-lib": "^1.34.10"
   },
   "devDependencies": {
     "chai": "^4.2.0",
